# ym2021-test

./: README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/: env-build.yml
.github/archive/: publish-anaconda.yml  unit-tests-pytest.yml
.github/workflows/: ci.yml  publish-anaconda.yml  publish-to-test-pypi.yml  publish_anaconda.yml  workflow.yml
__dumpster/: MANIFEST.in
conda/: meta.yaml
ym2021_prj/: __init__.py  _version.py  cli.py
ym2021_prj/tests/: test_cli.py
