[coverage:run]
concurrency=
    thread
    multiprocessing
; data_file = /tmp/ym2021_prj.coverage

[flake8]
max-line-length = 115
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F722,  # allow Annotated[typ, some_func("some string")]
    F811,  # support typing.overload decorator
    W503,
    W504,
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs/source,

[isort]
profile=black

[metadata]
description_file = README.md
# TODO: bring in more from setup.py
name = ym2021_prj
description = Repository to test GitHub Actions Workflows.
url="https://github.com/prjemian/ym2021_prj"
license = CC0 1.0 Universal
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Python test repository
author = Pete R. Jemian
author_email = prjemian@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development

[options]
python_requires = >=3.8
packages = find:
setup_requires =
    setuptools_scm[toml]>=6.2

# Specify any package dependencies below.  Examples shown
; install_requires =
;     numpy
;     pip

[options.extras_require]
# For development tests/docs
dev =
    coveralls
    pytest
    pytest-cov

# Specify any package data to be included in the wheel below.
[options.package_data]
ym2021_prj =
    # Include our documentation helpers:
    "*.rst"
    "*.md"

; [options.entry_points]
; databroker.handlers =
;     NPY_SEQ = ophyd.sim:NumpySeqHandler
; #     entry_points={
; #         # create & install scripts in <python>/bin
; #         "console_scripts": [
; #             "ym2021_prj=ym2021_prj.cli:main",
; #         ],
; #         # 'gui_scripts': [],
; #     },
; #     test_suite="ym2021_prj/tests",
; # )

; -----------------------------

; [bdist_wheel]
; universal=1

; [egg_info]
; tag_build =
; tag_date = false

; [aliases]
; release = egg_info -RDb ''
